# crowdin-nested-json-postprocessor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_ACTION.md  README_PYTHON.md  SECURITY.md  action.yml  dev-requirements.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  python.yml
.trunk/: trunk.yaml
crowdin_nested_json_postprocessor/: __main__.py  postprocessor.py
lib/: __init__.py  cleanup.py  formatter.py
test/: test_library.py
tests/: test.py  test_library.py
