[tool.poetry]
name = "crowdin-nested-json-postprocessor"
version = "0.1.0"
description = "Remove null or empty keys, list and array from JSON files."
authors = ["Pun Butrach <pun.butrach@gmail.com>", "Ushie <ushie@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/validcube/crowdin-nested-json-postprocessor"
Issues = "https://github.com/validcube/crowdin-nested-json-postprocessor/issues"
Documentation = "https://readthedocs.org"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
ruff   = "^0.1.1"
mypy   = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
